# arhivach-downloader

./: Cargo.toml  README.md  template.html
.github/workflows/: build.yml
src/: backend.rs  cli.rs  config.rs  events.rs  export.rs  file.rs  http.rs  lib.rs  main.rs  parse_args.rs  post.rs  render.rs
src/export/: mod.rs
src/export/html/: mod.rs  render.rs
src/lib/: config.rs  download.rs  error.rs  event.rs  lib.rs  post.rs
src/lib/export/: mod.rs
src/lib/export/html/: mod.rs  render.rs
