[package]
name = "arhivarch-downloader"
description = "Download threads from arhivach."
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = "symbols"

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "arhivach-downloader"
path = "src/bin/cli/main.rs"

[dependencies]
scraper = "0.25.0"
ureq = "3.3.0"
